Fix T48030: Can't zoom VSE properties panel